# galapassistant

./: .gitignore  README.md  asgi.py  conftest.py  pyproject.toml  pytest.ini  urls.py  wsgi.py
.github/workflows/: ci.yaml
galapassistant/: urls.py
galapassistant/app/: urls.py  views.py
galapassistant/apps/assistant/.knowledge_base/: the Origin of Species.txt
galapassistant/apps/assistant/services/: embedding_service.py  generation.py  indexing.py  llm_service.py  rag_service.py  retrieval.py  retriever_service.py  utils.py
galapassistant/apps/chat/: views.py
galapassistant/settings/: settings.py
scripts/: manage.py  run_unit_tests.py
settings/: settings.py
templates/: chat.html
tests/: test_chat.py  test_consumers.py  test_embedding_service.py  test_generation.py  test_indexing.py  test_llm_service.py  test_retrieval.py  test_retriever_service.py  test_views.py
