[project]
name = "galapassistant"
version = "0.1.0"
description = "AI that knows a lot about natural selection"
authors = [
    {name = "Felipe Siconha",email = "felipesiconha@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "django (>=3.2,<4.0)",
    "pytest (>=8.3.5,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
